# cnn-from-scratch

./: .gitignore  CMakeLists.txt
include/: ConvLayer.h  DenseLayer.h  LayerData.h  Network.h  activations.h  testMain.h  trainMain.h
include/helper_functions/: ActivationFuncs.h  GetFuncDeriv.h  GetInverse.h  PoolFuncs.h
src/: ConvLayer.cpp  DenseLayer.cpp  Network.cpp  activations.cpp  main.cpp  testMain.cpp  trainMain.cpp
src/helper_functions/: ActivationFuncs.cpp  GetFuncDeriv.cpp  GetInverse.cpp  PoolFuncs.cpp
